# sensor_pipeline

./: .gitignore  README.md  requirements.txt
src/: debug_version.py  generate_data.py  ingest_kaggle_data.py  inspect_bag.py  setup_cpp_dependencies.py  setup_data.py
src/cpp_processor/: CMakeLists.txt  blur_detector.cpp  main.cpp
